# explorers

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.tsx  File.tsx  FirstRowButton.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
